Package vulnerability updates. Removed one currently unused package.

--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^4.1.2",
+    "concurrently": "^5.3.0",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "http-proxy-middleware": "^1.0.5",
@@ -33,7 +34,6 @@
     "mongoose": "^5.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-jwt.socketio": "^0.1.1",
     "socket.io": "^2.3.0",
     "socketio-jwt": "^4.6.2",
     "validator": "^13.1.1"
